# rust-vm-multitenant

./: .env  Cargo.toml  Dockerfile  README.md  auth-vm-cluster.yml  docker-compose-frontend.yaml  docker-compose-rust.yaml  docker-compose.yaml  prometheus-vm-cluster.yml  prometheus-vm-single.yml
.zed/: debug.json
agent/: Cargo.toml  Dockerfile
agent/src/: agent.rs  container.rs  main.rs
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20231108213118_init.sql
backend/src/: main.rs
backend/src/nosql/: model.rs  web.rs
backend/src/nosql/web/: app.rs
backend/src/nosql/web/controller/: protected.rs  public.rs  victoria_api.rs
backend/src/nosql/web/middleware/: agent_token_validation.rs
examples/: spawn.rs
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js  setupProxy.js
frontend/src/api/: client.js
frontend/src/components/: ProtectedRoute.js
frontend/src/pages/: Dashboard.css  Dashboard.js  Login.css  Login.js  Metrics.css  Metrics.js
frontend/src/store/: authStore.js
migrations/: 20231108213118_init.sql
src/: lib.rs  main.rs  model.rs  nosql.rs  users.rs  web.rs
src/agent/: common.rs  main.rs
src/nosql/: model.rs  users.rs  web.rs
src/nosql/web/: app.rs  controller.rs
src/nosql/web/controller/: auth.rs  protected.rs  public.rs  victoria_api.rs
src/nosql/web/extractor/: current_user.rs
src/nosql/web/middleware/: agent_token_validation.rs
src/web/: app.rs  auth.rs  middleware.rs  protected.rs  public.rs  victoria_api.rs
src/web/extractor/: current_user.rs
src/web/middleware/: agent_token_validation.rs
templates/: login.html
