[package]
name = "nosqlensiie"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"

[dependencies]
axum-login = "0.18.0"
askama = { version = "0.12.1" }
axum = "0.8.6"
axum-messages = "0.8.0"
http = "1.0.0"
hyper = "1.0.1"
password-auth = "1.0.0"
serde = "1"
sqlx = { version = "0.8.1", features = ["postgres","tls-native-tls", "time", "runtime-tokio", "any", "macros"] }
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.5.2"
redis = { version = "0.25", features = ["tokio-comp"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-redis-store = "0.16"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
thiserror = "2.0.0"
futures-util = "0.3.31"
async-trait = "0.1.89"
serde_json = "1.0.145"
reqwest = "0.12.24"
docker-api = "0.14.0"
clap = {version = "4.5.51", features = ["derive"]}
futures = "0.3.31"
env_logger = "0.11.8"
tar = "0.4.44"
