[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.51", features = ["derive", "env"]}
docker-api = "0.14.0"
env_logger = "0.11.8"
futures = "0.3.31"
regex = "1.12.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
